--- a/Dockerfile.go.multistage
+++ b/Dockerfile.go.multistage
@@ -22,6 +22,9 @@ FROM gcr.io/distroless/base-debian10
 
 WORKDIR /
 
+## If using html templates
+COPY --from=build /app/templates/* /templates/
+
 COPY --from=build /go-app /go-app
 
 EXPOSE 8080
